Revert "cmake/qt: remove unused dependencies"
This reverts commit 517eea1ee3d33d63ce1ec88b47353c031e85c81f.

--- a/QtCollider/CMakeLists.txt
+++ b/QtCollider/CMakeLists.txt
@@ -9,10 +9,15 @@ find_package(Qt5WebKit)
 find_package(Qt5WebKitWidgets)
 find_package(Qt5PrintSupport)
 find_package(Qt5OpenGL)
+find_package(Qt5Sensors)
+find_package(Qt5Quick)
+find_package(Qt5Qml)
+find_package(Qt5Sql)
+find_package(Qt5Positioning)
 
 set (QT_COLLIDER_LIBS
   Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Network Qt5::WebKit Qt5::WebKitWidgets Qt5::PrintSupport
-  Qt5::OpenGL
+  Qt5::OpenGL Qt5::Sensors Qt5::Quick Qt5::Qml Qt5::Sql Qt5::Positioning
   ${MATH_LIBRARY})
 
 if (APPLE)
